services/java-telemetry-api/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-telemetry-api
  labels:
    app.kubernetes.io/name: java-telemetry-api
    app.kubernetes.io/component: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: java-telemetry-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: java-telemetry-api
        app.kubernetes.io/component: api
    spec:
      serviceAccountName: tenant-admin
      containers:
        - name: java-telemetry-api
          image: ghcr.io/rfar/platform-guardrails-lab/java-telemetry-api:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
      volumes:
        - name: data
          emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
